# md-mermaid-pdf

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
example/: diagram.md
resources/: style.css
src/: main.py
src/core/: color.py  constants.py  models.py  utils.py  validation.py
src/markdown/: image.py  mermaid.py  processor.py
src/pdf/: converter.py
tests/core/: test_color.py  test_image.py  test_models.py  test_utils.py
tests/markdown/: test_mermaid.py  test_processor.py
tests/pdf/: test_converter.py
