[project]
name = "md-mermaid-pdf"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<=3.13"
readme = "README.md"
dependencies = [
    "pip>=25.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "ipython>=8.34.0",
    "markdown2>=2.5.3",
    "markupsafe==2.1.5",
    "md2pdf==1.0.1",
    "mermaid-py==0.7.1",
    "requests==2.32.2",
    "tqdm>=4.67.1",
    "types-colorama>=0.4.15.20240311",
    "types-markdown>=3.7.0.20250322",
    "types-tqdm>=4.67.0.20250401",
    "types-requests==2.32.0.20250328",
    "black==25.1.0",
    "icecream==2.1.4",
    "mypy==1.15.0",
    "ruff==0.11.2",
    "types-click>=7.1.8",
    "pytest>=8.3.5",
]


[project.scripts]
md-mermaid-pdf = "src.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src", "src/core", "src/core/color"]

[project.optional-dependencies]


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
lint.select = ["F", "E", "W", "I", "N", "ARG"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
